# janus-sim

./: .dockerignore  .gitignore  CLAUDE.md  CRASH_RECOVERY_20260425.md  CTATION.cff  CURRENT_RUN.txt  Cargo.toml  Dockerfile  FILAMENTS_ROADMAP.md  FILAMENTS_ROADMAP_patch2.md  HISTORY_COMPLETE_20260425.md  KNOWN_FIXES.md  PETIT_THEORY_CORRECTION.md  PROMPT_PKTRUNC_12M.md  PROMPT_PKTRUNC_V2.md  PROMPT_TREEPM_TEST.md  PROMPT_VALIDATION_500K.md  README.md  RELANCE_LOG.md  RESULTS.md  RUNS.md  RUN_NOTES.md  TREEPM_ROADMAP.md  VALIDATION_RULES.md  build.rs  config_pub40M_video.yaml  diagnostic_lcdm.yaml  diagnostic_lcdm2.yaml  docker-compose.yml  generate_figures.py  janus_analysis_v6_cumulative.md  janus_linear_analysis.md  janus_roadmap.md  janus_roadmap_pm.md  janus_visualization_dual_pipeline.md  prompt_cli_direct.md  prompt_cli_figures_only.md  prompt_cli_from_scratch.md  render_frames.py  render_isometric.py  (+2 more)
Scanu/: run_plan.md
analysis/: cluster_lightup.py  frame_15panels_4K.py  stellar_postprocessing.py
analysis_v10_snapshot1000/: analyze_v10.py  domain_stats.json  polarization_stats.json  summary.json  viz_3d.py  viz_particles_4k.py
analysis_v10_snapshot2000/: V10_SIMULATION_RESULTS.md  analyze_v10.py  summary.json  viz_particles_4k.py
analysis_v10_snapshot500/: Pk_density.json  Pk_polarization.json  analyze_v10.py  domain_diameters.npy  domain_stats.json  polarization_density_correlation.csv  polarization_stats.json  report.txt
analysis_v10_snapshot500_extended/: domain_stats.json  extended_analysis.py  fast_analysis.py  janus_scale.txt  viz_3d.py
archive/octree_resonance_evidence/: README.md
audit/: 01_treepm_inventory.md  02_force_pipeline.md  03_grgadget_corrections.md  04_gpu_capabilities.md  05_janus_conventions.md  06_tree_splitting_current.md
config/: phase1c_gpu_impl.json  phase1c_validated.json
cuda/: build_cooling.sh  build_cufft.sh  build_sph.sh  cooling_kernel.cu  cooling_kernel.ptx  cooling_validation.cu  cufft_wrapper.cu  sph_pressure.cu  sph_pressure.ptx
docs/: CONFIG_RUN_12M.md  CUFFT_IMPLEMENTATION.md  KNOWN_FIXES.md  METAL_PORT.md  SCALING_100M.md  THEORITICAL_NOTE.md  janus_simulation_protocol_v4.md
janus-pm/: Cargo.toml  build.rs  requirements.txt
janus-pm/scripts/: auto_continue.sh  render_3panel.py  render_frames.py  render_snapshot.py
janus-pm/src/: cic.rs  cuda_kernels.rs  cufft.rs  cufft_ffi.rs  gpu_simulation.rs  integrator.rs  janus_pm.rs  lib.rs  main.rs  poisson.rs  snapshot.rs
janus-pm/src/kernels/: pm_kernels.cu
janus-sim/: analyse_rotation.py
janus-sim/.claude/: settings.json
logs/treepm/: phase105_diagnostic_report.md  phase105_postfix_STOP.md  phase106_audit_synthesis.md  phase106_kernel_audit.md  phase107_validation_report.md  phase108_ewald_verdict.md  phase109_minirun_REPORT.md  phase10_A3_gpu_audit.md  phase10_BLOCKER.md  phase10_FINAL_STATUS.md  (+9 more)
md/: ANALYSE_COMPLETE_15M.md  AUTONOMOUS_MODE.md  AUTONOMOUS_MODE_V2.md  AUTONOMOUS_MODE_V3.md  BARYONIC_INTEGRATION_PLAN.md  EXPLORATION_GRID.md  FILAMENTS_ROADMAP_patch.md  FILAMENTS_ROADMAP_patch3.md  GALAXY_LIGHTUP_SPEC.md  KNOWN_FIXES.md  PAPIERS_2024_INTEGRATION.md  PHASE1_FIX_PROMPT.md  PHASE2_FIX_PROMPT.md  PHASE3_DIAGNOSTIC_PROMPT.md  PHASE8_FORCE_SIGN_AUDIT.md  PHASE9_DEEPER_ANALYSIS.md  PHASE_2C_SCREENING_FINAL.md  PHASE_2_INVITRO.md  PLAN_CLI_TREEPM_JANUS.md  PROMPT_CLI_OPTION_B_JANUS_EXPANSION.md  PROMPT_CLI_PHASE97B_INVESTIGATION.md  PROMPT_CLI_PRECISION_CHECK.md  PROMPT_CLI_RUN_V9_FINAL.md  PROMPT_HALO_BLEU_SUIVI_TEMPOREL.md  PROMPT_PRODUCTION_RUN.md  PROMPT_STEP3500_VIRIAL_HALO_BLEU.md  PROMPT_ZELDOVICH_THEN_BH12M.md  RESULTS_janus.md  ROADMAP_janus_incroyable.md  RUNS.md  RUNS_patch_20260303.md  SCAN_PHASE3_50RUNS.md  TREEPM_ROADMAP.md  V8_ZOOM_LAUNCH.md  VALIDATION_RULES.md  ZOOM_ADAPTATIF_PLAN.md  ZOOM_L1_SPEC.md  ZOOM_L1_V2_SPEC.md  ZOOM_V3_TOP_DU_TOP.md  chatgpt_analysis.md  (+22 more)
optim/: analyze_validation_2M.py  analyze_validation_fast.py  confirmation_9runs.py  filament_metrics_v2.py  metrics.py  render_frames.py  rescore_all.py  rescore_top.py  run_tour.py  score.py  smoke_test.yaml  test_eta_high.yaml  test_screening_100.yaml  test_screening_5.yaml  tour3_passes.py  tour3_v2.py  trichotomy.py  trichotomy_gpu.py  validation_300mpc.yaml
patchV6/: CHANGELOG.md  README_aleatoire.md  janus_adaptive_zoom.rs  v6_full.patch  validate_ics.py
results/: exploration_results.csv  validation_results.csv
scripts/: PROMPT_RENDER_VIDEO.md  acceleration_janus.py  acceleration_multiprobe.py  analyse_dtfe.py  analyse_halo_spatial.py  analyse_lcdm.py  analyse_pk.py  analyse_pk_etape3a.py  analyse_snapshot_15M.py  analysis_complete.py  analysis_nuit3.py  analysis_phase1a.py  analysis_v10.py  analyze_coarsening.py  analyze_delta_k.py  analyze_eds_log.py  analyze_filament_detail.py  analyze_full_run.py  analyze_full_run_fast.py  analyze_halo_separation.py  analyze_janus_metrics.py  analyze_old_runs.py  analyze_phase1.py  analyze_phase1_fast.py  analyze_proto_stars.py  analyze_run8.py  analyze_run8_v2.py  analyze_scan_fine.py  analyze_scan_mu.py  analyze_snapshot_full.py  analyze_snapshots.py  analyze_tour1_v3.py  analyze_tour2_filaments.py  analyze_tour3_filaments.py  analyze_v13_cosmic_web.py  anisotropy_test.py  auto_render_v3.py  batch_render.py  check_structure.py  coarsening_xi_test.py  (+144 more)
src/: analysis.rs  config.rs  cooling_gpu.rs  early_stop.rs  friedmann.rs  grackle_wrapper.rs  ic_gen.rs  janus_expansion.rs  lensing.rs  lib.rs  metrics.rs  nbody.rs  nbody_gpu.rs  nbody_gpu_mixed.rs  nbody_gpu_twopass.rs  peculiar_velocity.rs  power_spectrum.rs  rotation_curves.rs  snapshot_v3.rs  sph_pressure_gpu.rs  vsl_dynamic.rs
tests/: pre_phase2_checks.rs  test_cooling_calibrated.py  test_cooling_cuda.rs  test_cooling_precision.py  test_cooling_precision_v2.py  test_cooling_sd93_final.py  test_etape0_foundations.rs  test_etape0b_zeldovich_ics.rs  test_etape1_cooling.rs  test_etape2_star_formation.rs  test_etape3_pk.rs  test_etape4_lensing.rs  test_etape5_rotation.rs  test_etape6_repeller.rs  treepm_continuity.rs  treepm_isotropy.rs  treepm_physics_8p.rs
(+183 files in other folders)
