[workspace]
members = [".", "janus-pm"]
resolver = "2"

[package]
name = "janus-sim"
version = "0.1.0"
edition = "2021"
description = "Janus Cosmological Model — numerical validation"
authors = ["AJP"]

[[bin]]
name = "friedmann"
path = "src/bin/friedmann.rs"

[[bin]]
name = "nbody"
path = "src/bin/nbody.rs"

[[bin]]
name = "nbody_gpu_test"
path = "src/bin/nbody_gpu_test.rs"

[[bin]]
name = "nbody_gpu_10m"
path = "src/bin/nbody_gpu_10m.rs"

[[bin]]
name = "nbody_gpu_prod"
path = "src/bin/nbody_gpu_prod.rs"

[[bin]]
name = "test_gpu_tree"
path = "src/bin/test_gpu_tree.rs"

[[bin]]
name = "compare_gpu_kdk"
path = "src/bin/compare_gpu_kdk.rs"

[[bin]]
name = "compare_forces"
path = "src/bin/compare_forces.rs"

[[bin]]
name = "debug_bvh"
path = "src/bin/debug_bvh.rs"

[[bin]]
name = "profile_tree"
path = "src/bin/profile_tree.rs"

[[bin]]
name = "test_incremental"
path = "src/bin/test_incremental.rs"

[[bin]]
name = "profile_step"
path = "src/bin/profile_step.rs"

[[bin]]
name = "test_async"
path = "src/bin/test_async.rs"

[[bin]]
name = "profile_full_step"
path = "src/bin/profile_full_step.rs"

[[bin]]
name = "profile_force"
path = "src/bin/profile_force.rs"

[[bin]]
name = "compare_force_methods"
path = "src/bin/compare_force_methods.rs"

[[bin]]
name = "test_virial_perf"
path = "src/bin/test_virial_perf.rs"

[[bin]]
name = "test_theta"
path = "src/bin/test_theta.rs"

[[bin]]
name = "test_theta_2m"
path = "src/bin/test_theta_2m.rs"

[[bin]]
name = "final_benchmark"
path = "src/bin/final_benchmark.rs"

[[bin]]
name = "validate_theta2"
path = "src/bin/validate_theta2.rs"

[[bin]]
name = "quick_theta_scan"
path = "src/bin/quick_theta_scan.rs"

[[bin]]
name = "test_theta07"
path = "src/bin/test_theta07.rs"

[[bin]]
name = "run_8m"
path = "src/bin/run_8m.rs"

[[bin]]
name = "test_anisotropic"
path = "src/bin/test_anisotropic.rs"

[[bin]]
name = "test_yukawa_n2"
path = "src/bin/test_yukawa_n2.rs"

[lib]
name = "janus"
path = "src/lib.rs"

[features]
default = []
cuda = ["cudarc"]
cufft = []  # Requires libcufft_wrapper.so (see cuda/build_cufft.sh)

[dependencies]
# Algèbre linéaire SIMD
nalgebra = "0.33"

# Parallélisme CPU
rayon = "1.10"

# CUDA GPU (optional)
cudarc = { version = "0.12", features = ["cuda-12030", "nvrtc"], optional = true }

# Note: cuFFT not available in cudarc 0.12. Using hybrid approach:
# - rustfft for FFT (CPU)
# - CUDA kernel for force interpolation (GPU)

# Random number generation
rand = "0.9"
rand_distr = "0.5"

# Sérialisation CSV
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }

# Statistiques / optimisation
argmin = "0.10"
argmin-math = "0.4"

# Logging
log = "0.4"
env_logger = "0.11"

# FFT for Zel'dovich ICs
rustfft = "6.2"
num-complex = "0.4"

# Date/time for output directories
chrono = "0.4"

[dev-dependencies]
approx = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
[[bin]]
name = "test_new"
path = "src/bin/test_new.rs"

[[bin]]
name = "test_zeldovich"
path = "src/bin/test_zeldovich.rs"

[[bin]]
name = "jour4_filaments"
path = "src/bin/jour4_filaments.rs"

[[bin]]
name = "segregation_z1000"
path = "src/bin/segregation_z1000.rs"

[[bin]]
name = "test_twopass"
path = "src/bin/test_twopass.rs"

[[bin]]
name = "janus_85m"
path = "src/bin/janus_85m.rs"

[[bin]]
name = "test_tree_small"
path = "src/bin/test_tree_small.rs"

[[bin]]
name = "janus_10m"
path = "src/bin/janus_10m.rs"

[[bin]]
name = "test_small"
path = "src/bin/test_small.rs"
required-features = ["cuda"]

[[bin]]
name = "test_theta08"
path = "src/bin/test_theta08.rs"
required-features = ["cuda"]

[[bin]]
name = "test_5m_theta"
path = "src/bin/test_5m_theta.rs"
required-features = ["cuda"]

[[bin]]
name = "test_gpu_bvh"
path = "src/bin/test_gpu_bvh.rs"
required-features = ["cuda"]

[[bin]]
name = "test_force_scaling"
path = "src/bin/test_scaling.rs"
required-features = ["cuda"]

[[bin]]
name = "verify_sort"
path = "src/bin/verify_sort.rs"
required-features = ["cuda"]

[[bin]]
name = "scaling_quick"
path = "src/bin/scaling_quick.rs"
required-features = ["cuda"]

[[bin]]
name = "test_original"
path = "src/bin/test_original.rs"
required-features = ["cuda"]

[[bin]]
name = "test_theta_twopass"
path = "src/bin/test_theta_twopass.rs"
required-features = ["cuda"]

[[bin]]
name = "run_8m_zeldovich"
path = "src/bin/run_8m_zeldovich.rs"
required-features = ["cuda"]

[[bin]]
name = "run_8m_virialized"
path = "src/bin/run_8m_virialized.rs"
required-features = ["cuda"]

[[bin]]
name = "test_8m_debug"
path = "src/bin/test_8m_debug.rs"
required-features = ["cuda"]

[[bin]]
name = "test_twopass_8m"
path = "src/bin/test_twopass_8m.rs"
required-features = ["cuda"]

[[bin]]
name = "test_morton_fix"
path = "src/bin/test_morton_fix.rs"
required-features = ["cuda"]

[[bin]]
name = "test_slowdown"
path = "src/bin/test_slowdown.rs"
required-features = ["cuda"]

[[bin]]
name = "profile_twopass"
path = "src/bin/profile_twopass.rs"
required-features = ["cuda"]

[[bin]]
name = "run_8m_theta07"
path = "src/bin/run_8m_theta07.rs"
required-features = ["cuda"]

[[bin]]
name = "test_theta_scaling"
path = "src/bin/test_theta_scaling.rs"
required-features = ["cuda"]

[[bin]]
name = "test_nbody_gpu_theta"
path = "src/bin/test_nbody_gpu_theta.rs"
required-features = ["cuda"]

[[bin]]
name = "profile_8m"
path = "src/bin/profile_8m.rs"
required-features = ["cuda"]

[[bin]]
name = "profile_8m_direct"
path = "src/bin/profile_8m_direct.rs"
required-features = ["cuda"]

[[bin]]
name = "profile_8m_morton"
path = "src/bin/profile_8m_morton.rs"
required-features = ["cuda"]

[[bin]]
name = "bench_force"
path = "src/bin/bench_force.rs"
required-features = ["cuda"]

[[bin]]
name = "quick_warpcoherent_test"
path = "src/bin/quick_warpcoherent_test.rs"
required-features = ["cuda"]

[[bin]]
name = "test_warpcoherent_scaling"
path = "src/bin/test_warpcoherent_scaling.rs"
required-features = ["cuda"]

[[bin]]
name = "test_80m_quick"
path = "src/bin/test_80m_quick.rs"
required-features = ["cuda"]

[[bin]]
name = "run_40m_publication"
path = "src/bin/run_40m_publication.rs"
required-features = ["cuda"]

[[bin]]
name = "test_40m_5steps"
path = "src/bin/test_40m_5steps.rs"
required-features = ["cuda"]

[[bin]]
name = "test_1m_jitter"
path = "src/bin/test_1m_jitter.rs"
required-features = ["cuda"]

[[bin]]
name = "gpu_visual_run"
path = "src/bin/gpu_visual_run.rs"
required-features = ["cuda"]

[[bin]]
name = "test_grid_artifact"
path = "src/bin/test_grid_artifact.rs"
required-features = ["cuda"]

[[bin]]
name = "test_cufft"
path = "src/bin/test_cufft.rs"
required-features = ["cufft"]

[[bin]]
name = "test_treepm_hybrid"
path = "src/bin/test_treepm_hybrid.rs"
required-features = ["cuda"]

[[bin]]
name = "test_treepm_gpu"
path = "src/bin/test_treepm_gpu.rs"
required-features = ["cuda", "cufft"]

[[bin]]
name = "treepm_production_test"
path = "src/bin/treepm_production_test.rs"
required-features = ["cuda", "cufft"]

[[bin]]
name = "diag_ke"
path = "src/bin/diag_ke.rs"
required-features = ["cuda", "cufft"]

[[bin]]
name = "diag_cosmo"
path = "src/bin/diag_cosmo.rs"
required-features = ["cuda", "cufft"]

[[bin]]
name = "diag_bugs"
path = "src/bin/diag_bugs.rs"
required-features = ["cuda", "cufft"]

[[bin]]
name = "test_pm_repulsion"
path = "src/bin/test_pm_repulsion.rs"
required-features = ["cuda", "cufft"]

[[bin]]
name = "test_2particle"
path = "src/bin/test_2particle.rs"
required-features = ["cuda", "cufft"]

[[bin]]
name = "test_segregation"
path = "src/bin/test_segregation.rs"
required-features = ["cuda", "cufft"]

[[bin]]
name = "regression_bh_ref"
path = "src/bin/regression_bh_ref.rs"
required-features = ["cuda", "cufft"]

[[bin]]
name = "diag_bh_vs_treepm"
path = "src/bin/diag_bh_vs_treepm.rs"
required-features = ["cuda", "cufft"]

[[bin]]
name = "diag_pe_analytical_vs_exact"
path = "src/bin/diag_pe_analytical_vs_exact.rs"

[[bin]]
name = "diag_no_virialization"
path = "src/bin/diag_no_virialization.rs"
required-features = ["cuda", "cufft"]

[[bin]]
name = "diag_rcut_virialization"
path = "src/bin/diag_rcut_virialization.rs"

[[bin]]
name = "diag_uniform_vs_zeldovich"
path = "src/bin/diag_uniform_vs_zeldovich.rs"
required-features = ["cuda", "cufft"]

[[bin]]
name = "test_no_virial"
path = "src/bin/test_no_virial.rs"
required-features = ["cuda", "cufft"]

[[bin]]
name = "test_force_compare"
path = "src/bin/test_force_compare.rs"
required-features = ["cuda", "cufft"]

[[bin]]
name = "test_pm_vs_bh"
path = "src/bin/test_pm_vs_bh.rs"
required-features = ["cuda", "cufft"]

[[bin]]
name = "diag_bh_pure"
path = "src/bin/diag_bh_pure.rs"
required-features = ["cuda"]

[[bin]]
name = "treepm_validation"
path = "src/bin/treepm_validation.rs"
required-features = ["cuda", "cufft"]

[[bin]]
name = "treepm_2m_production"
path = "src/bin/treepm_2m_production.rs"
required-features = ["cuda", "cufft"]

[[bin]]
name = "bench_step_methods"
path = "src/bin/bench_step_methods.rs"
required-features = ["cuda", "cufft"]

[[bin]]
name = "treepm_benchmark"
path = "src/bin/treepm_benchmark.rs"
required-features = ["cuda", "cufft"]

[[bin]]
name = "bench_morton"
path = "src/bin/bench_morton.rs"
required-features = ["cuda"]

[[bin]]
name = "bench_treepm_morton"
path = "src/bin/bench_treepm_morton.rs"
required-features = ["cuda", "cufft"]

[[bin]]
name = "janus_85m_treepm"
path = "src/bin/janus_85m_treepm.rs"
required-features = ["cuda", "cufft"]

[[bin]]
name = "validate_virial_500k"
path = "src/bin/validate_virial_500k.rs"
required-features = ["cuda", "cufft"]

[[bin]]
name = "validate_virial_100k"
path = "src/bin/validate_virial_100k.rs"
required-features = ["cuda", "cufft"]

[[bin]]
name = "validate_zeldovich_100k"
path = "src/bin/validate_zeldovich_100k.rs"
required-features = ["cuda", "cufft"]

[[bin]]
name = "treepm_zeldovich_test"
path = "src/bin/treepm_zeldovich_test.rs"
required-features = ["cuda", "cufft"]

[[bin]]
name = "treepm_zeldovich_multimode"
path = "src/bin/treepm_zeldovich_multimode.rs"
required-features = ["cuda", "cufft"]
